--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 <h1>I'm  Mansoor Majeed</h1>
         HELLO World :)
-
+<img src="https://avatars.githubusercontent.com/u/83159118?v=4">
     </body>
 
 </html>
