--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 <h1>I'm  Mansoor Majeed</h1>
         HELLO World :)
 <img src="https://avatars.githubusercontent.com/u/83159118?v=4">
+<ol>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
+<ul>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Unordered list</li>
+
+</ul>
     </body>
 
 </html>
