--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>I'm  Mansoor Majeed</h1>
         HELLO World :)
 <img src="https://avatars.githubusercontent.com/u/83159118?v=4">
+        <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 <ol>
 
     <li>This</li>
