--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
         <title>My Own web page</title>
 
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 <h1>I'm  Mansoor Majeed</h1>
