--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 <ol>
 
-    <li>This</li>
+    <li>LinkedIn</li>
 
-    <li>Is an</li>
+    <li>Instagram</li>
 
-    <li>Ordered list</li>
+    <li>Twitter</li>
 
 </ol>
 <ul>
 
-    <li>This</li>
+    <li>Belive in yourselfs</li>
 
-    <li>Is an</li>
+    <li>Love what you do</li>
 
-    <li>Unordered list</li>
+    <li>Do what u loe</li>
 
 </ul>
     </body>
